--- a/dev/scss/inc/_header.scss
+++ b/dev/scss/inc/_header.scss
@@ -6,17 +6,25 @@
 	background: #fff;
 	padding: 15px 0;
 	@include clearfix;
-	// box-shadow: 0 1px 1px rgba(0,0,0,.1);
-	// position: relative;
-	// z-index: 1;
+
+	@media (max-width: $mobile-max) {
+		box-shadow: 0 1px 10px rgba(0,0,0,.1);
+		position: relative;
+		z-index: 1;
+	}
 }
 
 .header__logo a {
 	width: 180px;
 	height: 45px;
 	background: url(../img/pfc-logo.png) center no-repeat;
-	background-size: 180px auto;
+	background-size: cover;
 	float: left;
+
+	@media (max-width: $mobile-max) {
+		width: 120px;
+		height: 30px;
+	}
 }
 
 .home {
