--- a/dev/scss/inc/_posttype.scss
+++ b/dev/scss/inc/_posttype.scss
@@ -89,12 +89,16 @@
 			#fff;
 		background-size: 359px 333px;
 		box-shadow: 0px 1px 0px 0px rgba(0,0,0,0.10);
-		padding: 50px 30px;
+		padding: 30px;
 		margin-bottom: 45px;
 		margin-top: -10px;
 
+		@media (min-width: $mobile) {
+			padding: 50px;
+		}
+
 		@media (min-width: $tablet) {
-			padding: 60px 100px;
+			padding: 60px 15%;
 		}
 	}
 
@@ -145,6 +149,87 @@
 			border-top: 1px dashed $color-darker-text;
 			bottom: 3px;
 			left: 0;
+		}
+	}
+}
+
+
+// upcoming course
+.upcoming {
+	background: #f4f4f4;
+	box-shadow: 0px 1px 3px 0px rgba(0,0,0,0.20);
+
+
+	@media (min-width: $tablet) {
+		display: table;
+		width: 100%;
+	}
+
+	> * {
+
+		@media (min-width: $tablet) {
+			display: table-cell;
+		}
+
+	}
+
+	&__image {
+		padding: 30px;
+		text-align: center;
+
+		@media (min-width: $tablet) {
+			width: 25%;
+			vertical-align: top;
+		}
+	}
+
+	&__content {
+		padding: 30px;
+		padding-top: 0;
+
+		@media (min-width: $tablet) {
+			padding-left: 0;
+			padding-top: 30px;
+			vertical-align: top;
+			width: 50%;
+		}
+	}
+
+	&__details {
+		margin-bottom: 0;
+		padding-left: 0;
+		list-style: none;
+		font-size: 14px;
+	}
+
+	&__cta {
+		vertical-align: middle;
+		text-align: center;
+		border-top: 1px dashed #ccc;
+		padding: 30px;
+		overflow: hidden;
+
+		@media (min-width: $tablet) {
+			padding-left: 0;
+			padding-right: 0;
+			border-top: none;
+			border-left: 1px dashed #ccc;
+		}
+
+		a {
+			@media (min-width: $mobile) and (max-width: $mobile-max) {
+				float: right;
+			}
+		}
+	}
+
+	&__fee {
+		font-size: 36px;
+
+		@media (min-width: $mobile) and (max-width: $mobile-max) {
+			float: left;
+			margin-bottom: 0;
+			line-height: 44px;
 		}
 	}
 }
