--- a/dev/scss/inc/_woocommerce.scss
+++ b/dev/scss/inc/_woocommerce.scss
@@ -103,6 +103,11 @@
 	}
 }
 
+//ordering
+.woocommerce-ordering {
+	display: none;
+}
+
 // .woocommerce-result-count {
 // 	font-family: $font-bold;
 // }
