--- a/dev/scss/inc/_global.scss
+++ b/dev/scss/inc/_global.scss
@@ -38,7 +38,11 @@ body {
 	font: 16px/1.5 $font;
 	color: $color;
   min-height: 100vh;
-  padding-top: 66px;
+  padding-top: 75px;
+
+  @media (max-width: $mobile-max) {
+    padding-top: 66px;
+  }
 
   &.home {
     @media (min-width: $tablet) {
