--- a/dev/scss/inc/_posttype.scss
+++ b/dev/scss/inc/_posttype.scss
@@ -63,6 +63,14 @@
 		margin-bottom: 20px;
 		font-size: 30px;
 
+		a {
+			color: $color-darker;
+
+			&:hover, &:focus {
+				color: $color-red;
+			}
+		}
+
 		&::after {
 			content: '';
 			position: absolute;
