--- a/dev/scss/inc/_header.scss
+++ b/dev/scss/inc/_header.scss
@@ -15,7 +15,7 @@
 
 	> .container {
 		width: auto;
-		max-width: no !important;
+		max-width: none !important;
 	}
 
 	@media (max-width: $mobile-max) {
